--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--  Favicon -->
-    <link rel="icon" type="image/png" href="logo-smk.png">
+    <link rel="icon" type="image/png" href="https://mail.smkmuhbligo.sch.id/storage/others/logo-smk.png">
 
     <!--  Meta Description -->
     <meta name="description" content="Profil SMK Muhammadiyah Bligo: visi, misi, data guru, kegiatan sekolah, dan kontak resmi.">
@@ -17,7 +17,7 @@
 
     <!-- HEADER -->
     <header>
-        <img src="logo-smk.png" alt="Logo SMK Muhammadiyah Bligo" class="logo"> <!--  Alt lebih deskriptif -->
+        <img src="https://mail.smkmuhbligo.sch.id/storage/others/logo-smk.png" alt="Logo SMK Muhammadiyah Bligo" class="logo"> <!--  Alt lebih deskriptif -->
         <h1>SMK MUHAMMADIYAH BLIGO</h1>
     </header>
 
@@ -55,7 +55,7 @@
             </ul>
             
             <h2>Kegiatan MPLS 2024</h2>
-            <img src="c:\Users\Windows\Desktop\tugas\Biwoo5CJYSWfzTHZ0gfMsSrC2Kv4PLVPyjbHqQXD1N7DOOrbcA.jpg" alt="Foto kegiatan MPLS 2024 di SMK Muhammadiyah Bligo" class="kegiatan"> <!--  Alt lebih baik -->
+            <img src="https://smkmuhbligo.sch.id/storage/thumbnail/postingan/Biwoo5CJYSWfzTHZ0gfMsSrC2Kv4PLVPyjbHqQXD1N7DOOrbcA.jpg" alt="Foto kegiatan MPLS 2024 di SMK Muhammadiyah Bligo" class="kegiatan"> <!--  Alt lebih baik -->
         </section>
 
         <!-- TABEL GURU -->
